Update GKE Cluster to alleviate some current pain-points: - Apply "new design paradigm" `reconcileAfter` - Fix Location column name - Add Resource Labels support (client) - Error wrapping
Signed-off-by: Illya Chekrygin <illya.chekrygin@gmail.com>

--- a/cluster/charts/crossplane/crds/gcp/compute/v1alpha1/gkecluster.yaml
+++ b/cluster/charts/crossplane/crds/gcp/compute/v1alpha1/gkecluster.yaml
@@ -22,7 +22,7 @@ spec:
   - JSONPath: .spec.classRef.name
     name: CLUSTER-CLASS
     type: string
-  - JSONPath: .spec.location
+  - JSONPath: .spec.zone
     name: LOCATION
     type: string
   - JSONPath: .spec.reclaimPolicy
